descomplicando-kubernetes/day-15/disallow-user-root.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-root-user
spec:
  validationFailureAction: Enforce
  rules:
  - name: check-runAsNonRoot
    match:
      resources:
        kinds:
        - Pod
    validate:
      message: "Runningas root is not allowed. Set runAdNonRoot to true"
      pattern:
        spec:
          containers:
          - secutiryContext:
              runAsNonRoot: true
